src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <description>The location the person is chatting from</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>The origin of the chat</description>
        <label>caseOrigin</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactEmail__c</fullName>
        <inlineHelpText>The contact email of the chat</inlineHelpText>
        <label>contactEmail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactFirstName__c</fullName>
        <label>contactFirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactLastName__c</fullName>
        <label>contactLastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactReason__c</fullName>
        <description>The reason for the chat</description>
        <label>contactReason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>liveagentchats_LiveChatTranscript</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <label>liveagentchats</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>